<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/quiz_bb"
    tools:context=".QuizQuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/quiz" />

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="6dp"
            android:textStyle="bold"
            android:gravity="center"
            tools:text="What country does this flag belongs to?"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/iv_flag"
            android:layout_width="wrap_content"
            android:layout_height="186dp"
            android:layout_margin="24dp"
            android:contentDescription="@string/quiz_image"
            tools:src="@drawable/india" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center"
            android:orientation="horizontal">


            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="50dp"
                android:progress="0" />


            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:textSize="14sp"
                android:text="@string/_0_10"
                android:textColor="#EBE9E9" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_opt_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="15dp"
            tools:text="Apple" />

        <TextView
            android:id="@+id/tv_opt_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="15dp"
            tools:text="Apple"  />

        <TextView
            android:id="@+id/tv_opt_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="15dp"
            tools:text="Apple"  />

        <TextView
            android:id="@+id/tv_opt_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="15dp"
            tools:text="Apple"  />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#2979FF"
            android:padding="8dp"
            android:text="@string/submit" />

    </LinearLayout>



</ScrollView>